[package]
name = "registry-edge"
version = "0.0.1"
authors = ["Hyeseong Kim <tim@daangn.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
cfg-if = "0.1.2"
worker = "0.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"

console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
opt-level = "s"
